src/test/ui/issues/issue-45829/rename-extern.stderr
error[E0259]: the name `issue_45829_a` is defined multiple times
  --> $DIR/rename-extern.rs:15:1
   |
LL | extern crate issue_45829_a;
   | --------------------------- previous import of the extern crate `issue_45829_a` here
LL | extern crate issue_45829_b as issue_45829_a;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `issue_45829_a` reimported here
   | You can use `as` to change the binding name of the import
   |
   = note: `issue_45829_a` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0259`.
